[project]
name = "SpotifyMatcher"
version = "2.1.0"
description = "A simple tool to add your local music to a Spotify playlist"
authors = [{name="Bosco Domingo", email="boscodomingob@gmail.com"}]
license = {text = "GNU GPLv3"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "spotipy>=2.25.1",
    "tinytag>=2.1.0"
]

[tool.black]
line-length = 120
