[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "SpotifyMatcher"
version = "2.1.0"
description = "A simple tool to add your local music to a Spotify playlist"
authors = [{name="Bosco Domingo", email="boscodomingob@gmail.com"}]
license = {text = "GNU GPLv3"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "python-dotenv>=1.1.0",
    "spotipy>=2.26.0",
    "tinytag>=2.2.1"
]

[tool.black]
line-length = 120
